--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
+    "docs:build": "vitepress build docs && echo dasbook.eth100.wtf > docs/.vitepress/dist/CNAME",
     "docs:preview": "vitepress preview docs --port 8080",
     "format": "prettier --write ."
   },
