--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Angry-ETH/dasbook.git"
+    "url": "https://github.com/eth-100/dasbook.git"
   },
   "keywords": [
     "data-availability",
